Gettext: fix invalid free of unowned object

g_subprocess_get_stderr_pipe is (transfer none), so we cannot
assign it to an autoptr variable, as that will attempt to release
the reference when going out of scope.

https://bugzilla.gnome.org/show_bug.cgi?id=768935